--- a/styles/style.css
+++ b/styles/style.css
@@ -598,7 +598,7 @@ nav ul li a:not(.active):before {
 .division-logo-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
@@ -615,7 +615,7 @@ nav ul li a:not(.active):before {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   align-items: flex-start;
   gap: 1.5rem;
